tests/error/non_function_template.gw
#! [contains] can't call a non-callable value
var int test;
test:[int]();
